<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeBookActivity">

    <TextView
        android:id="@+id/book_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="142dp"
        android:layout_height="135dp"
        android:contentDescription="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/book_text"
        app:layout_constraintVertical_bias="0.863"
        app:srcCompat="@drawable/mleko" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="129dp"
        android:layout_height="109dp"
        android:layout_marginEnd="168dp"
        android:contentDescription="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        app:srcCompat="@drawable/owsianka" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="160dp"
        android:layout_height="152dp"
        android:contentDescription="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.864"
        app:srcCompat="@drawable/smoothieszpinakowobananowe" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="148dp"
        android:layout_height="120dp"
        android:contentDescription="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_text"
        app:layout_constraintVertical_bias="0.21"
        app:srcCompat="@drawable/salatka" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="145dp"
        android:layout_height="162dp"
        android:contentDescription="@string/ksiązkaKucharska"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toEndOf="@+id/book_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        app:srcCompat="@drawable/smoomocy" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="81dp"
        android:layout_height="54dp"
        android:contentDescription="@string/home"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/book_text"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/dom" />

    <ImageButton
        android:id="@+id/pantryButton"
        android:layout_width="86dp"
        android:layout_height="59dp"
        android:contentDescription="@string/ksiązkaKucharska"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/homeButton"
        app:layout_constraintEnd_toStartOf="@+id/book_text"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/spizarnia" />

    <TextView
        android:id="@+id/saladText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salatkazawokado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/porridgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/owsianka"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/goldMilkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zlotemleko"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <TextView
        android:id="@+id/smoothiebananText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smoothiebananowe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/składnikiSałatki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/saladText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/saladText"
        app:layout_constraintTop_toBottomOf="@+id/saladText"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skladnikiOwsianki"
        app:layout_constraintBottom_toBottomOf="@+id/porridgeText"
        app:layout_constraintEnd_toStartOf="@+id/imageView11"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/book_text"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:text="@string/koktajlmocy_skladniki"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/składnikiSmoothieBananowego"
        app:layout_constraintBottom_toBottomOf="@+id/smoothiebananText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/koktajlmocy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/składnikiZlotegoMleka"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sałatkaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprawdzMnieButton"
        android:tooltipText="Wpływa głównie na\nwzmocnienia serca!"

        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/pantryButton"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/porridgeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprawdzMnieButton"
        android:tooltipText="Wpływa głównie na\nwzrost kondycji umysłowej!
        "
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <Button
        android:id="@+id/milkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprawdzMnieButton"
        android:tooltipText="Wpływa głównie na\nzwiększenie odpornosci!
         "
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.335"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/saladText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/smoothieBananButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/sprawdzMnieButton"
        android:tooltipText="Wpływa głównie na\nzwiększenie energii!
        "
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/porridgeText"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/smoothiePowerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sprawdzMnieButton"
        android:tooltipText="Jest to koktajl na wszystko!"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>