<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="867dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="306dp">

            <Button
                android:id="@+id/reverseButton"
                android:layout_width="182dp"
                android:layout_height="82dp"
                android:text="cofnij"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.794"
                app:layout_constraintStart_toEndOf="@+id/addButton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.928" />

            <TextView
                android:id="@+id/amountText"
                android:layout_width="85dp"
                android:layout_height="46dp"
                android:text="@string/ilosc"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/avokadoImage"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/avokadoImage"
                app:layout_constraintTop_toBottomOf="@+id/avokadoImage"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/avocadoText"
                android:layout_width="321dp"
                android:layout_height="58dp"
                android:text="@string/ingredient_avocado"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/avokadoImage"
                app:layout_constraintEnd_toEndOf="@+id/avokadoImage"
                app:layout_constraintHorizontal_bias="0.363"
                app:layout_constraintStart_toStartOf="@+id/avokadoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="182dp"
                android:layout_height="82dp"
                android:text="@string/addButton"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.62"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.928" />

            <ImageView
                android:id="@+id/avokadoImage"
                android:layout_width="222dp"
                android:layout_height="141dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/awokado" />

            <TextView
                android:id="@+id/brainText"
                android:layout_width="201dp"
                android:layout_height="49dp"
                android:layout_marginEnd="108dp"
                android:text="mózg: 8"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/heartText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.456" />

            <TextView
                android:id="@+id/heartText"
                android:layout_width="183dp"
                android:layout_height="39dp"
                android:layout_marginEnd="328dp"
                android:layout_marginBottom="116dp"
                android:text="serce: 10"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.747"
                app:layout_constraintStart_toEndOf="@+id/avokadoImage"
                app:layout_constraintTop_toBottomOf="@+id/energyText"
                app:layout_constraintVertical_bias="0.516" />

            <TextView
                android:id="@+id/immunityText"
                android:layout_width="221dp"
                android:layout_height="41dp"
                android:layout_marginEnd="84dp"
                android:text="odpornosc: 5"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/brainText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@+id/energyText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.421" />

            <TextView
                android:id="@+id/energyText"
                android:layout_width="195dp"
                android:layout_height="59dp"
                android:layout_marginEnd="240dp"
                android:text="energia: 7"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.386"
                app:layout_constraintStart_toEndOf="@+id/avokadoImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.129" />

            <TextView
                android:id="@+id/amountValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brakIlosci"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/avokadoImage"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/amountText"
                app:layout_constraintTop_toBottomOf="@+id/avokadoImage"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>